--- a/cv.html
+++ b/cv.html
@@ -62,7 +62,7 @@
 								<p class="anounce">Kennis</p><p class="points">:</p><p class="skill">Excel, Visual Basic, waarin ik het management voorzien heb van rapportages, analyses en daaruit voortvloeiende adviezen</p>
 							</div>
 							<div class="row even">
-								<p class="anounce">Tijd</p><p class="points">:</p><p class="skill">2010 - 6 maanden</p>
+								<p class="anounce">Periode</p><p class="points">:</p><p class="skill">2010 - 6 maanden</p>
 							</div>
 						</div>
 						<div class="skillBlock">
@@ -73,7 +73,7 @@
 								<p class="anounce">Kennis</p><p class="points">:</p><p class="skill">Linux, Javascript, Android development</p>
 							</div>
 							<div class="row even">
-								<p class="anounce">Tijd</p><p class="points">:</p><p class="skill">2011 - 6 maanden</p>
+								<p class="anounce">Periode</p><p class="points">:</p><p class="skill">2011 - 6 maanden</p>
 							</div>
 						</div>
 						<div class="skillBlock">
@@ -84,7 +84,7 @@
 								<p class="anounce">Kennis</p><p class="points">:</p><p class="skill">C#, HTML, CSS, Wordpress, Photoshop, Data recovery (afstudeeropdracht)</p>
 							</div>
 							<div class="row even">
-								<p class="anounce">Tijd</p><p class="points">:</p><p class="skill">2012 - 6 maanden</p>
+								<p class="anounce">Periode</p><p class="points">:</p><p class="skill">2012 - 6 maanden</p>
 							</div>
 						</div>
 						<div class="skillBlock">
@@ -95,7 +95,7 @@
 								<p class="anounce">Kennis</p><p class="points">:</p><p class="skill">Vakken vullen, magazijn bijhouden</p>
 							</div>
 							<div class="row even">
-								<p class="anounce">Tijd</p><p class="points">:</p><p class="skill">2007 - 2010</p>
+								<p class="anounce">Periode</p><p class="points">:</p><p class="skill">2007 - 2010</p>
 							</div>
 						</div>
 						<div class="skillBlock">
@@ -106,7 +106,7 @@
 								<p class="anounce">Kennis</p><p class="points">:</p><p class="skill">Communicatie, verkoper, witgoed & elektronica</p>
 							</div>
 							<div class="row even">
-								<p class="anounce">Tijd</p><p class="points">:</p><p class="skill">2010 - huidig</p>
+								<p class="anounce">Periode</p><p class="points">:</p><p class="skill">2010 - huidig</p>
 							</div>
 						</div>
 					</fieldset>
@@ -126,7 +126,7 @@
 								<p class="anounce">Vakken</p><p class="points">:</p><p class="skill">NL, ENG, Security, PHP, Rechten, Linux, Netwerkbeheer, Cisco</p>
 							</div>
 							<div class="row even">
-								<p class="anounce">Tijd</p><p class="points">:</p><p class="skill">2009 - 2012 - 3 jaar</p>
+								<p class="anounce">Periode</p><p class="points">:</p><p class="skill">2009 - 2012 - 3 jaar</p>
 							</div>
 						</div>
 						<div class="skillBlock">
@@ -143,7 +143,7 @@
 								<p class="anounce">Vakken</p><p class="points">:</p><p class="skill">Forensic IT, Netwerkbeheer, Webtechnologie, Java, business proces management, SQL, Linux</p>
 							</div>
 							<div class="row even">
-								<p class="anounce">Tijd</p><p class="points">:</p><p class="skill">2012 - 2016 - 4 jaar</p>
+								<p class="anounce">Periode</p><p class="points">:</p><p class="skill">2012 - 2016 - 4 jaar</p>
 							</div>
 						</div>
 					</fieldset>
@@ -200,7 +200,7 @@
 				</div>
 				<br class="clear" />
 				<span id="footerbottom">
-					&copy; 2012 Randy Vroegop
+					&copy; 2014 Randy Vroegop
 				</span>
 			</div>
 		
