--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
 		
 		<title>Over mij - randy vroegop</title>
 		
-		<meta name="description" content="Ik ben Randy, een ICTer uit Hoogwoud. Sinds 2012 doe ik de opleiding Forensic ICT, en ik help graag bij problemen of een nieuwe website.">
+		<meta name="description" content="Ik ben Randy, een ICTer uit Hoogwoud. Sinds 2012 doe ik de opleiding Software Engineering.">
 		<meta name="keywords" content="randy, opleiding, recovery, webdesign, over, mij, introductie, hobby, helpen, data, afgerond">
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
@@ -18,7 +18,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 
 		<script type="text/javascript">
-
+		// Google analytics
+			
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-37102832-1']);
 		  _gaq.push(['_trackPageview']);
@@ -29,6 +30,7 @@
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
 
+		//end google analytics 
 		</script>
 		
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -134,16 +136,16 @@
 								<p class="anounce">School</p><p class="points">:</p><p class="skill"><em>(huidig)</em>Hogeschool Leiden</p>
 							</div>
 							<div class="row odd">
-								<p class="anounce">Studie</p><p class="points">:</p><p class="skill">Bachelor of ICT (forensische specialisatie)</p>
+								<p class="anounce">Studie</p><p class="points">:</p><p class="skill">Bachelor of ICT (Software Engineering)</p>
 							</div>
 							<div class="row even">
 								<p class="anounce">Niveau</p><p class="points">:</p><p class="skill">HBO Bachelor</p>
 							</div>
 							<div class="row odd">
-								<p class="anounce">Vakken</p><p class="points">:</p><p class="skill">Forensic IT, Netwerkbeheer, Webtechnologie, Java, business proces management, SQL, Linux</p>
+								<p class="anounce">Vakken</p><p class="points">:</p><p class="skill">Forensic IT, Netwerkbeheer, Webtechnologie, Java, business proces management, SQL, Linux, Gang of Four / Design patterns</p>
 							</div>
 							<div class="row even">
-								<p class="anounce">Periode</p><p class="points">:</p><p class="skill">2012 - 2016 - 4 jaar</p>
+								<p class="anounce">Periode</p><p class="points">:</p><p class="skill">2012 - 2017 - 5 jaar</p>
 							</div>
 						</div>
 					</fieldset>
