--- a/cv.html
+++ b/cv.html
@@ -142,7 +142,7 @@
 								<p class="anounce">Niveau</p><p class="points">:</p><p class="skill">HBO Bachelor</p>
 							</div>
 							<div class="row odd">
-								<p class="anounce">Vakken</p><p class="points">:</p><p class="skill">Forensic IT, Netwerkbeheer, Webtechnologie, Java, business proces management, SQL, Linux, Gang of Four / Design patterns</p>
+								<p class="anounce">Vakken</p><p class="points">:</p><p class="skill">- Forensic IT, Netwerkbeheer, Business proces management - Webtechnologie, Java, SQL, Gang of Four / Design patterns - Linux cli</p>
 							</div>
 							<div class="row even">
 								<p class="anounce">Periode</p><p class="points">:</p><p class="skill">2012 - 2017 - 5 jaar</p>
