--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<div class="third">
 						<div>	
 							<h2>Mijn studie</h2>
-							<p>Ik studeer aan de Hogeschool Leiden: Forensische ICT.</p>
+							<p>Ik studeer aan de Hogeschool Leiden: Software Engineering!</p>
 						</div>
 					</div>
 				</div>
@@ -88,10 +88,10 @@
 				<div id="welcome">
 					<h2>Welkom.</h2>
 					<p>
-						Ik hou me bezig met <span class="coloured">Webdesign, JQuery, Digital Forensics & Investigation</span>. 
+						Ik hou me bezig met <span class="coloured">Webdesign: HTML5 + CSS3 - OOP: PHP, Java, App development</span>. 
 					</p>
 					<p>
-						Ik volg de studie Forensische ICT aan
+						Ik volg de studie Software Engineering aan
 						de Hogeschool Leiden, een ontzettend gave
 						opleiding!
 					</p>
@@ -118,15 +118,15 @@
 				<div class="quote">
 					<img src="images/footer/randyvroegop.png" class="logo" alt="logo" />
 					<p>"Het internet veranderd, sneller dan wie dan ook.
-						Niemand probeerd in zijn eentje het internet te veranderen,
-						maar internet veranderd iedereen."</p>
+						Iedereen probeert het internet te veranderen,
+						het internet veranderd iedereen."</p>
 				</div>
 				<div>
 					<h2>Contact informatie</h2>
 					<p>Randy Vroegop<br>
 						Gouwe 21<br>
 						1718LK Hoogwoud<br>
-						rjp.vroegop@gmail.com</p>
+						<div id="email">moc.liamg@pogeorv.pjr</div></p>
 				</div>
 				<div>
 					<h2>Recente foto's</h2>
