--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
                 <div id="header-inside">
                     <div id="header-content">
                         <div id="header-left">
-                            <p>Development - kitesurfing - sales</p>
-                            <h1>Living life the water way.</h1>
+                            <p>Development - Kitesurfing - Life</p>
+                            <h1>Share your <span style="color:red;">&lt;3</span> with me</h1>
                         </div>
                         <a href="index.html" id="header-spotlight">
                             <img src="img/face.png" height="70px">
