--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <div id="header-inside">
                     <div id="header-content">
                         <div id="header-left">
-                            <p>Development - kitesurfing - sales</p>
-                            <h1>Living life the water way.</h1>
+                            <p>Development - Kitesurfing - Life</p>
+                            <h1>Developing life&rsquo;s strategy pattern</h1>
                         </div>
                         <a href="index.html" id="header-spotlight">
                             <img src="img/face.png" height="70px">
@@ -48,7 +48,7 @@
                 <h1>Over mij</h1>
                 <p>Mijn hobbies</p>
                 <div class="split">&nbsp;</div>
-                <p>In mijn vrije tijd doe ik aan kitesurfen. Ik ben vaak op het strand te vinden in Wijk aan zee.</p>
+                <p>In mijn vrije tijd doe ik (web)development, kitesurfen, mountainbiken, snowboarden...</p>
             </a>
 
             <a href="cv.html" class="panel no-js">
@@ -56,7 +56,7 @@
                 <h1>C V</h1>
                 <p>Wie ben ik</p>
                 <div class="split">&nbsp;</div>
-                <p>Kom te weten wat mij drijft en waar ik al die jaren heb uitgehangen. <em>Niet doorvertellen!</em></p>
+                <p>Kom te weten wat mij drijft en waar ik al die jaren heb uitgehangen.</p>
             </a>
 
             <a href="portfolio.html" class="panel no-js">
