--- a/over.html
+++ b/over.html
@@ -30,8 +30,8 @@
                 <div id="header-inside">
                     <div id="header-content">
                         <div id="header-left">
-                            <p>Development - kitesurfing - sales</p>
-                            <h1>Living life the water way.</h1>
+                            <p>Development - Kitesurfing - Life</p>
+                            <h1>Does not fear the amazing.</h1>
                         </div>
                         <a href="index.html" id="header-spotlight">
                             <img src="img/face.png" height="70px">
@@ -84,7 +84,7 @@
                     <div class="icon"><img src="img/tiles/java.jpg" /></div>
                     <div class="bar">
                         <div class="graybar"></div>
-                        <div class="fillbar java">Java</div>
+                        <div class="fillbar ps">Java</div>
                     </div>
                 </div>
 
@@ -92,20 +92,29 @@
                     <div class="icon"><img src="img/tiles/php.jpg" /></div>
                     <div class="bar">
                         <div class="graybar"></div>
-                        <div class="fillbar php">PHP</div>
+                        <div class="fillbar ps">PHP</div>
                     </div>
                 </div>
 
                 <div class="skillholder">
-                    <div class="icon"><img src="img/tiles/ps.jpg" /></div>
+                    <div class="icon"><img src="img/tiles/node.png" /></div>
                     <div class="bar">
                         <div class="graybar"></div>
-                        <div class="fillbar ps">Photoshop</div>
+                        <div class="fillbar java">Node.js</div>
                     </div>
                 </div>
+				
+				<div class="skillholder">
+                    <div class="icon"><img src="img/tiles/cs.png" /></div>
+                    <div class="bar">
+                        <div class="graybar"></div>
+                        <div class="fillbar java">C#</div>
+                    </div>
+                </div>
+				
+                <img class="skillset" src="img/skill2.png">
 
                 <img class="skillset" src="img/skill1.png">
-                <img class="skillset" src="img/skill2.png">
 
             </div>
 
