--- a/portfolio.html
+++ b/portfolio.html
@@ -29,8 +29,8 @@
                 <div id="header-inside">
                     <div id="header-content">
                         <div id="header-left">
-                            <p>Development - kitesurfing - sales</p>
-                            <h1>Living life the water way.</h1>
+                            <p>Development - Kitesurfing - Life</p>
+                            <h1>Get to know more about me</h1>
                         </div>
                         <a href="index.html" id="header-spotlight">
                             <img src="img/face.png" height="70px">
@@ -48,7 +48,7 @@
                 <h1>maeckl</h1>
                 <p>kledinglogo's</p>
                 <div class="split">&nbsp;</div>
-                <p>Maeckl is een webwinkel die diensten en goederen aanbiedt.</p>
+                <p>Maeckl is een webwinkel die diensten en goederen verkoopt</p>
             </a>
 
             <a href="old/index.html" class="panel no-js">
@@ -64,7 +64,7 @@
                 <h1>leuk bij lieke</h1>
                 <p>Kinderopvang</p>
                 <div class="split">&nbsp;</div>
-                <p>Leuk bij lieke is een website die liquid is gebouwd. Hierdoor zit het er mooi uit op ieder apparaat.</p>
+                <p>Leuk bij lieke is een website die liquid werkt op alle schermen. Hierdoor zit het er mooi uit op ieder apparaat.</p>
             </a>
 
             <div id="footer">
