--- a/send.html
+++ b/send.html
@@ -29,7 +29,7 @@
                 <div id="header-inside">
                     <div id="header-content">
                         <div id="header-left">
-                            <p>Development - kitesurfing - sales</p>
+                            <p>Development - Kitesurfing - Life</p>
                             <h1>Living life the water way.</h1>
                         </div>
                         <a href="index.html" id="header-spotlight">
